unpackaged/main/default/objects/Engagement_Model__mdt/Engagement_Model__mdt.object-meta.xml
<CustomObject>
    <description>Used to store configurations for Call Cycle Algorithm</description>
    <label>Engagement Model</label>
    <pluralLabel>Engagement Model</pluralLabel>
</CustomObject>