unpackaged/main/default/objects/Engagement_Model__mdt/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top X from Customer Engagement Model</fullName>
                <default>true</default>
                <label>Top X from Customer Engagement Model</label>
            </value>
            <value>
                <fullName>Top X frequent contact – to call every second month</fullName>
            </value>
            <value>
                <fullName>Top X less frequent – to call every 4th month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>