unpackaged/main/default/objects/Engagement_Model__mdt/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
                <default>true</default>
                <label>Warehouse</label>
            </value>
            <value>
                <fullName>Small Format Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>