unpackaged/main/default/objects/Engagement_Model__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Model__c</columns>
    <columns>Format__c</columns>
    <columns>Store_Type__c</columns>
    <columns>Limit__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>